# ros2_lerobot

./: .gitignore  CLAUDE.md  QWEN.md  README.md  TODO.md  command_histiry.md  docker-compose.yml  dockerfile  pixi.toml
genesis_rl/: README.md  main.py  pyproject.toml  requirements.txt
genesis_rl/config/: env_config.yaml  ppo_config.yaml
genesis_rl/saved_models/: so101_pick_place_20260428_141844_final_appraoch.pt
genesis_rl/scripts/: check_env.py  eval.py  export_policy.py  test_reach.py  test_task.py  train.py
genesis_rl/tasks/: __init__.py  so101_pick_place.py
genesis_rl/test_env/: pyvenv.cfg
mjlab_rl/: COMMANDS.md  README.md  plan.md  pyproject.toml
mjlab_rl/export/: scene.xml
mjlab_rl/mjlab_rl/: __init__.py  _viser_patches.py
mjlab_rl/mjlab_rl/assets/: __init__.py  scene_objects.py  so101.py
mjlab_rl/mjlab_rl/envs/: __init__.py  actions.py  block_picking_env.py  mdp.py
mjlab_rl/mjlab_rl/policies/: __init__.py  mlp.py
mjlab_rl/mjlab_rl/solvers/: __init__.py  oracle.py
mjlab_rl/mjlab_rl/tasks/: block_picking.py  block_picking_vision.py
mjlab_rl/mujoco_models/: block_picking.xml
mjlab_rl/scripts/: distill.py  eval_policy.py  export_scene.py  export_to_jit.py  list_envs.py  play.py  play_print_camera.py  render_cameras.py  smoke_test.py  test_solver.py  train.py  train_bc.py
mujoco_rl/: README.md  pyproject.toml  train_sac.py  train_sac_with_camera.py
mujoco_rl/checkpoints/20260505_232646/: sac_vecnormalize_1049664_steps.pkl  sac_vecnormalize_1099648_steps.pkl  sac_vecnormalize_1149632_steps.pkl  sac_vecnormalize_1199616_steps.pkl  sac_vecnormalize_1249600_steps.pkl  sac_vecnormalize_1299584_steps.pkl  sac_vecnormalize_1349568_steps.pkl  sac_vecnormalize_1399552_steps.pkl  sac_vecnormalize_1449536_steps.pkl  sac_vecnormalize_1499520_steps.pkl  sac_vecnormalize_149952_steps.pkl  sac_vecnormalize_1549504_steps.pkl  sac_vecnormalize_1599488_steps.pkl  sac_vecnormalize_1649472_steps.pkl  sac_vecnormalize_1699456_steps.pkl  sac_vecnormalize_1749440_steps.pkl  sac_vecnormalize_1799424_steps.pkl  sac_vecnormalize_1849408_steps.pkl  sac_vecnormalize_1899392_steps.pkl  sac_vecnormalize_1949376_steps.pkl  sac_vecnormalize_1999360_steps.pkl  sac_vecnormalize_199936_steps.pkl  sac_vecnormalize_2049344_steps.pkl  sac_vecnormalize_2099328_steps.pkl  sac_vecnormalize_2149312_steps.pkl  sac_vecnormalize_2199296_steps.pkl  sac_vecnormalize_2249280_steps.pkl  sac_vecnormalize_2299264_steps.pkl  sac_vecnormalize_2349248_steps.pkl  sac_vecnormalize_2399232_steps.pkl  sac_vecnormalize_2449216_steps.pkl  sac_vecnormalize_2499200_steps.pkl  sac_vecnormalize_249920_steps.pkl  sac_vecnormalize_2549184_steps.pkl  sac_vecnormalize_2599168_steps.pkl  sac_vecnormalize_2649152_steps.pkl  sac_vecnormalize_2699136_steps.pkl  sac_vecnormalize_2749120_steps.pkl  sac_vecnormalize_2799104_steps.pkl  sac_vecnormalize_2849088_steps.pkl  (+161 more)
mujoco_rl/checkpoints/20260518_023911/: sac_vecnormalize_26000000_steps.pkl
mujoco_rl/checkpoints/20260518_052330/: sac_vecnormalize_2000000_steps.pkl
mujoco_rl/checkpoints/20260518_055335/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/checkpoints/20260518_215128/: sac_vecnormalize_39000000_steps.pkl
mujoco_rl/checkpoints/20260519_020030/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/checkpoints/20260520_011502/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/checkpoints/20260521_033515/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/checkpoints/20260522_042928/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/checkpoints/20260522_182528/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/checkpoints/20260523_175204/: sac_vecnormalize_80500000_steps.pkl
mujoco_rl/checkpoints/20260524_022304/: sac_vecnormalize_57000000_steps.pkl
mujoco_rl/checkpoints/20260524_082705/: sac_vecnormalize_37500000_steps.pkl
mujoco_rl/checkpoints/20260524_122844/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/checkpoints/20260525_011844/: sac_vecnormalize_16000000_steps.pkl
mujoco_rl/checkpoints/20260525_030341/: sac_vecnormalize_28000000_steps.pkl
mujoco_rl/checkpoints/20260525_060531/: sac_vecnormalize_28000000_steps.pkl
mujoco_rl/checkpoints/20260525_090718/: sac_vecnormalize_28000000_steps.pkl
mujoco_rl/checkpoints/20260525_120917/: sac_vecnormalize_100000000_steps.pkl
mujoco_rl/envs/: __init__.py  block_picking_env.py
mujoco_rl/logs/: evaluations.npz
mujoco_rl/logs/20260513_033039_1/: events.out.tfevents.1778610647.DesktopDebian13.4036677.0
mujoco_rl/logs/20260518_052330_1/: events.out.tfevents.1779049420.DesktopDebian13.1407091.0
mujoco_rl/logs/20260522_041438_1/: events.out.tfevents.1779390926.DesktopDebian13.3608912.0
mujoco_rl/logs/20260525_011844_1/: events.out.tfevents.1779639551.DesktopDebian13.3507544.0
mujoco_rl/mujoco_models/: block_picking.xml
my_robot_description/: CMakeLists.txt  package.xml  setup.py
my_robot_description/config/: so101_leader.yaml
my_robot_description/launch/: view_bot.launch.py  view_bot_gui.launch.py  view_bot_gui_2robots.launch.py  view_bot_gui_leader.launch.py  view_bot_py.launch.py
my_robot_description/scripts/: camera_test.py  robot_tf_node.py  so101_leader.py
my_robot_description/src/: random_joint_publisher.cpp
my_robot_description/urdf/: so101_new_calib.urdf
my_robot_description/urdf/SO101/: so101_new_calib.urdf
src/lerobot_robots_bringup/: CMakeLists.txt  package.xml  setup.py
src/lerobot_robots_bringup/config/: teleop_so101.yaml
src/lerobot_robots_bringup/launch/: so101_follower.launch.py  so101_gazebo.launch.py  so101_leader.launch.py  so101_policy.launch.py  teleoperator.launch.py  view_follower.launch.py
src/lerobot_robots_bringup/lerobot_robots_bringup/: so101_joint_state_to_trajectory.py
src/lerobot_robots_bringup/src/: dummy_cpp.cpp
src/lerobot_robots_description/: CMakeLists.txt  package.xml
src/lerobot_robots_description/config/: so101_controllers.yaml
src/lerobot_robots_description/launch/: gazebo.launch.py  view_leader.launch.py  view_so101.launch.py
src/lerobot_robots_description/meshes/: container.stl  container_collision.stl  (+2 more)
(+60 files in other folders)
