[project]
name = "mjlab_rl"
version = "0.1.0"
description = "SO101 arm pick-and-place: scripted oracle + behavior cloning + policy distillation."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mujoco>=3.2.0",
    "gymnasium[mujoco]>=1.0.0",
    "numpy>=1.26",
    "torch>=2.2",
    "tqdm>=4.66",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mjlab_rl"]

[tool.uv]
package = true
