[project]
name = "mjlab_rl"
version = "0.2.0"
description = "SO-101 block pick-and-place RL task on top of mjlab (MuJoCo Warp)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mjlab",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mjlab_rl"]

[tool.uv]
package = true
