[project]
name = "block-picking-rl"
version = "0.1.0"
description = "Block picking RL environment for SO-101 (5+1 DOF)"
requires-python = "==3.12.*"
dependencies = [
    "mujoco>=3.1.0",
    "gymnasium>=0.29.0",
    "stable-baselines3[extra]>=2.3.0",
    "tensorboard>=2.17.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "imageio>=2.34.0",
    "ipython>=9.13.0",
]

[project.scripts]
train = "block_picking_rl.train_sac:main"
test-env = "block_picking_rl.scripts.test_env:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envs", "scripts"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]
